# trading-bot

./: .gitignore  Cargo.toml  LICENSE.txt  README.md  temo
save_states/: Jacob.txt  John.txt  bob.txt  test.txt
src/: algorithms.rs  api.rs  main.rs  menu_functions.rs  portfolio_code.rs  trade.rs
stock_data/: AAPL.txt  AMD.txt  IBM.txt  NVDA.txt  O.txt  TSLA.txt
testing_files/: test_read_lines.txt
