[package]
name = "trading-bot"
version = "0.1.0"
edition = "2021"

[dependencies]
dotenv = "0.15.0"
reqwest = { version = "0.11", features = ["json"] }
tokio = { version = "1", features = ["full"] }
serde_json = "1.0"
scraper = "0.17"
log = "0.4.24"
flexi_logger = "0.29.8"
chrono = "0.4.39"
tempfile = "3.15.0"

[dependencies.uuid]
version = "1.11.0"
features = [
    "v4",                # Lets you generate random UUIDs
    "fast-rng",          # Use a faster (but still sufficiently random) RNG
    "macro-diagnostics", # Enable better diagnostics for compile-time UUIDs
]
